# LATEC

./: .gitignore  README.md  pyproject.toml
configs/: eval.yaml  explain.yaml  rank.yaml
configs/data/: adrenalmnist3d.yaml  coma.yaml  imagenet.yaml  modelnet40.yaml  oct.yaml  organmnist3d.yaml  resisc45.yaml  shapenet.yaml  vesselmnist3d.yaml
configs/eval_method/: image_imagenet.yaml  image_oct.yaml  image_resisc45.yaml  point_cloud_coma.yaml  point_cloud_modelnet40.yaml  point_cloud_shapenet.yaml  volume_adrenal.yaml  volume_organ.yaml  volume_vessel.yaml
configs/explain_method/: image.yaml  point_cloud.yaml  volume.yaml
notebooks/: eval_vis_criteria.ipynb  eval_vis_ranking.ipynb  explain_vis_image.ipynb  explain_vis_point_cloud.ipynb  explain_vis_volume.ipynb
scripts/: multirun_explain_image.sh  multirun_explain_point_cloud.sh  multirun_explain_volume.sh  run_all_steps.sh
src/: _version.py
src/data/: adrenalmnist3d_datamodule.py  coma_datamodule.py  imagenet_datamodule.py  modelnet40_datamodule.py  oct_datamodule.py  organmnist3d_datamodule.py  resisc45_datamodule.py  shapenet_datamodule.py  vesselmnist3d_datamodule.py
src/main/: main_eval.py  main_explain.py  main_rank.py
src/modules/: eval_methods.py  models.py  xai_methods.py
src/modules/components/: attention.py  base_cam.py  deit_vit.py  dgcnn.py  grad_cam.py  grad_cam_plusplus.py  insertion_deletion.py  pc_transformer.py  pointnet.py  resnet.py  score_cam.py
src/utils/: __init__.py  plot_utils.py  point_sampling.py  reshape_transforms.py  rich_utils.py  utils.py
